--- a/.envlocal
+++ b/.envlocal
@@ -40,9 +40,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ALGOLIA_APP_ID=7DRYALAKAE
-ALGOLIA_SECRET=d595d90b3af3a950b612a8d134587a98
+ALGOLIA_APP_ID="7DRYALAKAE"
+ALGOLIA_SECRET="d595d90b3af3a950b612a8d134587a98"
 
-WECHAT_TOKEN=
-WECHAT_APPID=
-WECHAT_APPSECRET=
+WECHAT_TOKEN=sally
+WECHAT_APPID=wxf4744be08b32c926
+WECHAT_APPSECRET=0cfb2bce12efcb49a134e580b2066c9a
